--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.55.0",
     "react-icons": "5.5.0",
+    "react-markdown": "10.1.0",
+    "remark-gfm": "4.0.1",
     "tailwind-merge": "3.0.2"
   },
   "devDependencies": {
